# not-cat

./: .gitignore  README.md  not-cat.py  pyproject.toml
models/: efficientnet_backbone.py  yolov8n_backbone.py  yolov8n_backbone_v2.py
utils/: loader.py
